# trade-republic-mcp

./: .credentials  .gitignore  LICENSE  README.md  pyproject.toml
data/: banking_sample_data.csv  banking_sample_data_mini.csv  banking_simple.csv  create.py  query_data.py  trading_simple.csv  visualization_ideas.md  visualize_data.py
src/: client.py  config.py
src/backend/: ai.py  config.py  main.py
src/trade-republic/: server.py
src/trade_republic/: config.py  local.py  main.py  server.py
src/trade_republic/core/: server.py
src/trade_republic/features/: lookups.py  query_data.py  test.py  ws_api.py
src/trade_republic/resources/: greeting.py
src/trade_republic/tools/: add.py
tests/: query_tests.py
