[project]
name = "trade-republic-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.3.1",
    "pydantic-ai[mcp]>=0.1.10",
    "pytr>=0.4.2",
    "websocket-client>=1.8.0",
    "pandas>=2.2.0",
    "pyarrow>=20.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"
